# DAAPractice

1.1/: deletion.c  searchnode-tree.c  traversal-tree.c  tree.c
1.2/: Activity_selection.c  nothing.c
1.3/: activity_selection.c
1.4/: MatrixChainMultiplication.c  practice.c
Belman/: main.c  practice.c
Dijestra/: DjkstraInArray.c  Djstra2.c  SAMPLE.c  dijekstra.c
Exam/: knapsack.c  knapsackTree.c
LCS/: practice.c
Project_Main/: CMakeLists.txt  Makefile
Project_Main/__MACOSX/: ._CMakeLists.txt  ._Makefile
Project_Main/__MACOSX/src/: ._dijkstra.c
Project_Main/src/: dijkstra.c  dijkstra.h  main.c
Robin_Karp/: demo.c
SumOfSubset/: practice.c
Warshall/: Practice.c
project/: demo.c
